Pushing branch to share with @leojh

--- a/source/VirtualizedSelect/VirtualizedSelect.example.css
+++ b/source/VirtualizedSelect/VirtualizedSelect.example.css
@@ -72,3 +72,14 @@
   text-decoration: underline;
   cursor: pointer;
 }
+
+.loremIpsumOption {
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid lightgray;
+}
+.loremIpsumOptionFocused {
+  background-color: lightblue;
+}
+.loremIpsumOptionSelected {
+  background-color: gold;
+}
