--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,16 @@
 
 .VirtualizedSelectOption {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   padding: 0 .5rem;
 }
 .VirtualizedSelectFocusedOption {
   background-color: rgba(0, 126, 255, 0.1);
+}
+.VirtualizedSelectDisabledOption {
+  color: #999;
 }
