--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,11 @@
 .VirtualizedSelectOption {
   display: -webkit-box;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
+          -webkit-align-items: center;
           align-items: center;
   padding: 0 .5rem;
 }
@@ -15,5 +17,5 @@
   background-color: rgba(0, 126, 255, 0.1);
 }
 .VirtualizedSelectDisabledOption {
-  color: #999;
+  opacity: 0.5;
 }
